fix: Add gap between score box and name on P1 side
- Adjust #p1Wrapper from 348px to 360px
- Both P1 and P2 now have visible gap between score box and name

--- a/_overlays/css/style.scss
+++ b/_overlays/css/style.scss
@@ -43,7 +43,7 @@ body {
   }
 
   #p1Wrapper {
-    left: 348px;
+    left: 360px;
   }
 
   #p2Wrapper {
